# q_rescue_ai

./: Dir260645_Lokesh_Q-Rescue_Team_Roles_and_Achievables_Changes_Done(24-06-26).docx  README.md  pyproject.toml
Disaster_simulation_and optimisation_Model/M2_src/: main.py
app/: streamlit_app.py
configs/: default.toml
data/benchmarks/large/: ambulances.csv  distance_matrix.csv  distance_matrix.json  hospitals.csv  incident_hospital_matrix.csv  incident_hospital_matrix.json  incidents.csv  scenario.json  severity_weights.csv  severity_weights.json
data/benchmarks/medium/: distance_matrix.json  incident_hospital_matrix.json  scenario.json  severity_weights.csv  severity_weights.json
data/benchmarks/small/: hospitals.csv  (+5 more)
data/demo/: ambulances.csv  assignments.json  constraints.json  distance_matrix.csv  hospitals.csv  incident_hospital_matrix.csv  incidents.csv  scenario.json
data/outputs/: ambulances.csv  cost_matrix.csv  cost_matrix.json  distance_matrix.csv  distance_matrix.json  incidents.csv
data/sample/: README.md
docs/: architecture.md  interface_spec.md  optimisation_model.md  quantum-methodology.md  team-workflow.md
scripts/: compare_solvers.py  generate_benchmarks.py  generate_demo.py  generate_mock_assignments.py  run_poc.py  spike_osmnx.py
src/q_rescue/: __init__.py
tests/unit/: test_comparison.py  test_distance_matrix.py  test_exporters.py  test_incident_hospital_matrix.py  test_integration.py  test_multistart_qaoa_solver.py  test_qaoa_solver.py  test_qiskit_adapter.py  test_qubo.py  test_scenarios.py  test_services.py  test_sheffield.py
(+24 files in other folders)
