[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-rescue-ai"
version = "0.1.0"
description = "Disaster simulation and quantum emergency-response optimisation prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.22",
  "streamlit>=1.35",
]

[project.optional-dependencies]
quantum = [
  "qiskit>=1.1",
  "qiskit-aer>=0.14",
  "qiskit-optimization>=0.6",
]
geo = [
  "osmnx>=1.9",
  "networkx>=3.3",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/q_rescue"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pyright]
extraPaths = ["Disaster_simulation_and optimisation_Model"]
